--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
+.body {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 2.5rem;
+}
 
+.homeCard {
+  text-align: center;
+  margin: 16px;
+}
